<resources>
    <string name="generating">Generating your information...</string>
    <string name="app_name" >CypherSend</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update messages</string>
    <string name="action_guided">Guided Tour</string>
    <string name="app_cypher_and_send">Encrypt and send via target\'s server</string>
    <string name="app_cypher_and_apps">Encrypt and send via third party</string>
    <string name="share_popup">Share a message with an other application</string>
    <string name="discution_popup">Chat or throwable messages via friend\'s server</string>
    <string name="vault_popup">Nothing here... for now ;)</string>
    <string name="main_send">Share your public infos with a friend</string>
    <string name="main_web_send">Send using the web</string>
    <string name="main_share_send">Send encrypted using other app</string>
    <string name="main_send_no_friends_title">Error</string>
    <string name="main_send_no_friends_message">You have currently no friends registered. Ask them for their public infos before clicking here.</string>
    <string name="follow_me">Follow @codlab</string>
    <string name="personnal_data_subject">I\'m sharing my personnal CypherSend\'s public data with you</string>
    <string name="personnal_data_subject_third_party">Sharing an encrypted message with your public information</string>
    <string name="select_the_device_to_send_to">Select the device to send the message to</string>
    <string name="select_the_device_to_send_to_and_share">Select the recipient device and you will then be able to use any Android\'s app to share the encrypted message</string>
    <string name="share_via">Share via</string>
    <string name="action_share">Share</string>
    <string name="title_section_default">Main</string>
    <string name="title_section_friends">Partage</string>
    <string name="title_section_web">Web</string>
    <string name="title_section_help">Help</string>
    <string name="no_intent">Please select another way to share the message</string>
    <string name="no_friends">You currently have no friends saved on this device.</string>
    <string name="guided_tour_1">Use this application to share private messages with your Android device !</string>
    <string name="guided_tour_1_shortcut"></string>
    <string name="guided_tour_2">First step is to share your public information with some friends. These information look like a simple URL. Tell them to click on it while having the app installed.</string>
    <string name="guided_tour_3">Ask your friends for their own public information. You will receive urls you will need to click on to add theirs on your device.</string>
    <string name="guided_tour_4">Every secret message you will send are signed with your own information, exactly the same for your friends. You can know they sent them.</string>
    <string name="guided_tour_5">Take care of messages from unknown person, but don\'t be paranoid, it\'s unlikely a virus will arrive :p</string>
    <string name="guided_tour_6">Use your own chat apps, emails, etc... to send messages to your friends! Don\'t stop using them!</string>
    <string name="guided_tour_7">You also can subscribe to servers to manage your messages for you. In the settings, set your device name, ask to register on the server and you are ready to receive messages! The message are AUTOMATICALLY erased when you retrieve them! NO messages are stored, you don\'t trust me? Next slide ;)</string>
    <string name="guided_tour_8">You can create your own server : it is Open Source, then simply edit your settings to add its URL and finally share your public information with your friends, they will then send (not read) messages to the server</string>
    <string name="help_part_1_title">Register device for server side transactions</string>
    <string name="help_part_1_content">Registering your device is very easy BUT ABSOLUTELY NOT THE MOST IMPORTANT THING TO DO. \n First of all, open the settings via the menu and set your device name (remember the fact to stay anonymous). Then set the server url if you use your own server. Remember to register the device to the server (in order to retrieve your messages from it).\nAnd.... it\'s done. You\'re ready to receive messages (use the refresh button from the Actionbar).\nNote that you can also receive push notifications from Google (the GCM) by using the default server AND accepting to receive push notifications. pros and cons about these things are in the last part of this document.</string>
    <string name="help_part_2_title">Share your public information</string>
    <string name="help_part_2_content">Don\'t forget to send to your friend your device public data : you can use Android Beam to share them OR use the button on the main screen to send them via a third party app.\nOnce done, make sure your friend has your device name in his devices list from the second tab</string>
    <string name="help_part_3_title">Send message to friend\'s device</string>
    <string name="help_part_3_content">Two way to send a message.\nThe first one is to select the device of your friend in the second tab and select it. Then type your message and validate. Your friend can now retrieve the message from the server.\n \nSecond possibility, when you are in a browser, mail etc... select the message to send, and choose the share option from them. You will see the icon of the app with the title you can send the message to a device server. Select this one (not the other one) and validate the device of your friend. Once again, validate and it\'s done.</string>
    <string name="help_part_4_title">Send an encrypted message to a device via third party apps</string>
    <string name="help_part_4_content">Last but not the least. The app also permits you to transfer from an app, a message, text etc... encrypt it and then select an app to transfer the desired message.\nTo do so, select a text in an app and then use the share option from it.\nLocate the app icon in the list with the title indicating the use of third party app\nThen select your friend device, and click on the button on the right of it to send the encrypted message\nFinally, select the final app to send this encrypted message. Your friend will now be able to receive the encrypted message from his mail, etc...</string>
    <string name="help_part_5_title">Notes</string>
    <string name="help_part_5_content">Public infos are bounded to a device, not user so... when you change your device, you need to backup the information of your device if you want to restore/copy them to the new device.Warning : doing so will create a file on your sdcard (export.zip), you absolutely need to keep it secret, even if it is password protected, you can never trust any apps or anybody (even me and my apps...).\nUsing the force registering in the options will reset and create new public/private infos so your friends could not be able to send you messages you can unencrypt - remember to warn them\nIf you have multiple devices, you will be able to unencrypt a message only with the specified device! Not the other ones\n\n Remember that the app was supposed to be used to keep privacy... so the sharing options are not supposed to be here to let you keep encrypted message, ensure to delete the mail/sms/everything which carried the message when read! Obviously, when you use the server update messages, the message are deleted server-side WHEN you retrieve them!</string>
    <string name="help_part_7_title">ProTips</string>
    <string name="help_part_7_content">Never trust anybody you don\'t know when you receive a message.\nNever give someon the export.zip file or ALL your keys! Since the private key is obviously a key to keep secret - anyone with your keys will be able to send message and tell anyone he is yourself! Also the real time messenger available via GCM+my server is to use at your own risk.\n\nNote that when you use the GCM, Google will be able to know you possibly received a new content notification but will never be able to decode it since the encrypted information never pass through their servers.\nYou can obviously use the third party apps to be used as proxy, but remember that companies often only needs your metadata from your data : here it can be 1/ when did you send/receive a message. 2/ how long was the encrypted message! 3/ With who did you share the message?</string>
    <string name="help_part_6_title">Contact</string>
    <string name="help_part_6_content">You can contact me directly here:\nmail : codlabtech@gmail.com\ntwitter : http://twitter.com/codlab \nweb in general : search for codlab B)\n</string>
    <string name="not_suppose_to_be_this_device">The message was not suppose to be decrypted by this device!</string>
    <string name="device_send_message">New shared message</string>
    <string name="device_web_send_message">New Web message</string>
    <string name="settings_device_title">This Device name</string>
    <string name="settings_device_summary">It will be sent to your friend to help them identify your device</string>
    <string name="settings_website_title">Website root/url</string>
    <string name="settings_website_summary">The website url with / (!) to use as root to retrieve new messages</string>
    <string name="settings_register_title">Register to the server</string>
    <string name="settings_register_summary">Register device info to register to this server with your default device serial</string>
    <string name="settings_force_title">Force whole new registering</string>
    <string name="settings_force_summary">Will generate new devices info AND link to the server. Use to force register - you will need to resend to your friend your data</string>
    <string name="user_category">User</string>
    <string name="server_state_category">Server state</string>
    <string name="device">device</string>
    <string name="website">website</string>
    <string name="identifier">identifier</string>
    <string name="pass">pass</string>
    <string name="register">register</string>
    <string name="register_force">register_force</string>
    <string name="gcm_settings">gcm</string>
    <string name="default_server">https://cypher.codlab.eu/</string>
    <string name="dialog_message_register_title">Force new register</string>
    <string name="dialog_message_register_message_ok">You have been successfully registered to the server!</string>
    <string name="dialog_message_register_message_ko">The server did not accept the request : it seems the device is already registered.</string>
    <string name="dialog_message_register_message_timeout">The server is not up</string>
    <string name="dialog_message_force_title">Force new register</string>
    <string name="dialog_message_force_message_ok">The new register is OK. Please resend to your friend the data!</string>
    <string name="dialog_message_force_message_ko">The server did not accept the info : correct server?</string>
    <string name="successfully_saved">Saved successfully</string>
    <string name="error_saved">Error while retrieveing the new value</string>
    <string name="successfully_shared">Shared Successfully</string>
    <string name="keys_export_title">Export your keys</string>
    <string name="keys_export_message">Export the keys into the file /sdcard/keys.zip</string>
    <string name="keys_import_title">Import your keys</string>
    <string name="keys_import_message">Import the keys from the /sdcard/keys.zip file</string>
    <string name="keys_import">keys_import</string>
    <string name="keys_export">keys_export</string>
    <string name="keys_import_export">Manage your keys</string>
    <string name="codlab_public">Add @codlab\'s public infos</string>
    <string name="note_name">Name</string>
    <string name="note_content">Content</string>
    <string name="note_cancel">Cancel</string>
    <string name="note_confirm">Add</string>
</resources>