<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_with_shadow"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingTop="15dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">


        <eu.codlab.cyphersend.ui.RobotoButton
            android:id="@+id/note_add"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="5dp"
            android:text="@string/note_confirm"
            android:textSize="10dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <eu.codlab.cyphersend.ui.RobotoButton
            android:id="@+id/note_cancel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="5dp"
            android:text="@string/note_cancel"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/color"
        android:layout_width="8dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#000000"
        android:orientation="vertical"
        android:visibility="gone" />

    <EditText
        android:id="@+id/note_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/note_name" />


    <EditText
        android:id="@+id/note_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/note_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <eu.codlab.cyphersend.ui.RobotoButton
            android:id="@+id/note_confirm"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:text="@string/note_confirm"
            android:textSize="10dp" />
    </LinearLayout>


</LinearLayout>